--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -395,7 +395,8 @@
     "indexType": "Index Type",
     "addField": "Add Field",
     "addSchemaField": "Add to Defined Schema Fields",
-    "removeSchemaField": "Remove Defined Schema Fields"
+    "removeSchemaField": "Remove Defined Schema Fields",
+    "storeOriginalData" : "Store Original Data"
   },
   "pipeline": {
     "header": "Pipelines",
