--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -836,9 +836,19 @@
     "lastSatisfied": "Last Satisfied At",
     "owner": "Owner",
     "title": "Title",
-    "history": "History",
     "createFunction": "Create Function",
-    "newFunctionAssociationMsg": "Note: The function will be created, after which you will be redirected to the previous form to associate the newly created function with the pipeline."
+    "newFunctionAssociationMsg": "Note: The function will be created, after which you will be redirected to the previous form to associate the newly created function with the pipeline.",
+    "history": "History",
+    "alertName": "Alert Name",
+    "alertOrg": "Organization",
+    "alertNextRun": "Next Run",
+    "alertIsRealTime": "Is RealTime",
+    "alertIsSilence": "Is Silenced",
+    "alertHistoryRetries": "Retries",
+    "alertHistoryStatus": "Status",
+    "alertHistoryTriggeredAt": "Triggered At",
+    "alertHistoryStartTime": "Start Time",
+    "alertHistoryEndTime": "End Time"
   },
   "alert_templates": {
     "header": "Templates",
