--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -890,7 +890,8 @@
     "orgLabel": "Organization Parameters",
     "logDetails": "Log Details",
     "traceIdFieldName": "Trace ID Field Name",
-    "spanIdFieldName": "Span ID Field Name"
+    "spanIdFieldName": "Span ID Field Name",
+    "toggleIngestionLogsLabel": "Toggle Ingestion Logs"
   },
   "reports": {
     "header": "Reports",
