--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -128,6 +128,7 @@
     "viewTrace": "View Trace",
     "flattened": "Flattened",
     "unflattened": "Unflattened",
+    "original": "Original",
     "resetFilters": "Reset Filters"
   },
   "menu": {
